<resources>
    <string name="app_name">6six</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="sign_in_button">Access using Google</string>
    <string name="welcome">Welcome!</string>
    <string name="error_message">Something went wrong :(. Try again later</string>
    <string name="hello">Hello!</string>
    <string name="server_client_id">306778587401-jd0b9burfsrvttfsbhcv2nu4huf60jfm.apps.googleusercontent.com</string>
    <string name="toast_error">An error occurred, try again later</string>

    <!-- login Activity-->
    <string name="login_tv_logo_Bottom">너 의 취 향 을 골 라 봐</string>
    <string name="login_tv_login">간편로그인</string>

    <!-- Mypage Fragment -->
    <string name="mypage_tv_topbar_mypage">마이페이지</string>
    <string name="mypage_tv1_tablayout">tab1</string>

    <string name="mypage_nickname">김영남</string>
    <string name="mypage_filter">#독특한</string>
    <string name="mypage_tv_likelist">내가 저장한 장소</string>
    <string name="mypage_tv2_likelist">내가 좋아요한 콘텐츠</string>

    <string name="likelist_save_tv_name">육품</string>

    <string name="filter_name">조용한</string>
    <string name="tv1_filter_mypage">공간에 대한 내 취향을 골라주세요</string>
    <string name="tv2_filter_mypage">내 취향을 입력하면, 맞춤 장소를 추천하고\n 내가 좋아하는 장소를 모아서 볼 수 있어요</string>

    <!-- Home Fragment -->
    <string name="home_logo">로고</string>
    <string name="home_tv_search">검색</string>
    <string name="home_content_recommendation">추천으로 이동</string>
    <string name="home_content_image">장소 이미지</string>
    <string name="home_content_image1">스티커 이미지</string>
    <string name="home_recommendation_how_about"> 이 장소는 어때요?</string>
    <string name="home_recommendation_week">이번 주 최다 LIKILST</string>
    <string name="home_recommendation_restaurant">음식점 TOP 2</string>
    <string name="home_recommendation_cafe">카페 TOP 2</string>
    <string name="home_recommendation_play">놀거리 TOP 2</string>


    <!-- Restaurant Recommendation Fragmentt -->
    <string name="restaurant_recommendation_tv_mood1">#조용한</string>
    <string name="restaurant_recommendation_tv_mood2">  #트렌디한</string>
    <string name="restaurant_recommendation_how_about">이 음식점은 어때요?</string>
    <string name="cafe_recommendation_how_about">이 카페는 어때요?</string>
    <string name="play_recommendation_how_about">이 놀거리는 어때요?</string>
    <string name="restaurant_recommendation_filter1">지역</string>
    <string name="restaurant_recommendation_filter2">인기순</string>
    <string name="restaurant_recommendation_filter3">취향</string>
    <string name="restaurant_recommendation_filter4">종류</string>
    <string name="restaurant_recommendation_content_description">자세히 보기</string>
    <string name="restaurant_recommendation_content">이미지</string>

    <!-- Recommendation Filter -->
    <string name="filter_region">지역</string>
    <string name="colse_content">종료</string>
    <string name="filter_popular">정렬</string>
    <string name="filter_type">종류</string>
    <string name="filter_prefetence">취향</string>

    <string name="preference_option_1">\ \ 조용한</string>
    <string name="preference_option_2">\ \ 색다른</string>
    <string name="preference_option_3">\ \ 전통적인</string>
    <string name="preference_option_4">\ \ 모던한</string>
    <string name="preference_option_5">\ \ 화려한</string>
    <string name="preference_option_6">\ \ 로맨틱한</string>
    <string name="preference_option_7">\ \ 활기찬</string>
    <string name="preference_option_8">\ \ 트렌디한</string>

    <string name="popular_option_1">\ 리뷰 많은 순</string>
    <string name="popular_option_2">\ 최신 순</string>
    <string name="popular_option_3">\ 저장 순</string>
    <string name="popular_option_4">\ 별점 높은 순</string>
    <string name="popular_option_5">\ 별점 낮은 순</string>
  
    <string name="title_save_item">슈퍼두퍼 강남점</string>
    <string name="content_save_item">샌프란시스코를 대표하는 쥬이시한 프리미엄 수제버거</string>


</resources>

