<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.home.PopularFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:layout_margin="5dp"
        android:background="@color/white">

        <!--필터 메뉴-->
        <TextView
            android:id="@+id/filter_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_17"
            android:text="@string/filter_popular"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="@dimen/size_12"
            android:layout_height="@dimen/size_12"
            android:layout_marginEnd="@dimen/size_20"
            android:contentDescription="@string/colse_content"
            android:src="@drawable/btn_close"
            app:layout_constraintBottom_toBottomOf="@+id/filter_region"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filter_region" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size_50"
            app:layout_constraintTop_toTopOf="parent">

            <!-- 필터 메뉴 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/popular_option_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_12"
                    android:text="@string/popular_option_1" />

                <TextView
                    android:id="@+id/popular_option_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_12"
                    android:text="@string/popular_option_2" />

                <TextView
                    android:id="@+id/popular_option_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_12"
                    android:text="@string/popular_option_3" />

                <TextView
                    android:id="@+id/popular_option_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_12"
                    android:text="@string/popular_option_4" />

                <TextView
                    android:id="@+id/popular_option_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_12"
                    android:text="@string/popular_option_5" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>